fix: remove navigation rule, change link color to black and improve spacing.

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -44,7 +44,7 @@ blockquote {
 }
 
 pre code.hljs {
-	font-size: modular-scale(-1);
+	font-size: 87.5%;
 }
 
 .page-divider {
@@ -124,8 +124,6 @@ pre code.hljs {
 *	Header
 */
 .navigation {
-	box-shadow: 0 2px $black;
-	padding: 0 1em;
 	margin: 0;
 	top: 0;
 	left: 0;
@@ -151,7 +149,7 @@ pre code.hljs {
 
 	// Nav menu
 	.navigation-wrapper {
-		width: 56em;
+		width: 940px;
 		margin-left: auto;
 		margin-right: auto;
 		@include clearfix;
@@ -173,11 +171,9 @@ pre code.hljs {
 	ul.navigation-menu {
 		display: flex;
 		justify-content: space-around;
-		clear: both;
-		margin: 0 auto;
-		overflow: visible;
-		padding: 0;
-		width: 100%;
+		flex-wrap: wrap;
+		max-width: 940px;
+		line-height: 2.5em;
 
 		@include media ($tablet) {
 			margin: 0;
@@ -195,6 +191,8 @@ pre code.hljs {
 		text-align: right;
 		width: 100%;
 		padding: 0.25em 0;
+    font-size: 1.15em;
+    text-transform: uppercase;
 
 		@include media ($tablet) {
 			background: transparent;
@@ -207,6 +205,7 @@ pre code.hljs {
 	li.nav-link {
 		a {
 			display: inline-block;
+      color: black;
 
 			@include media ($tablet) {
 				padding-right: .35em;
@@ -226,7 +225,6 @@ pre code.hljs {
 */
 .page-content {
 	// Remove this to make header scrollable again
-	margin-top: 66px;
 
 	.wrapper {
 		@include outer-container;
